--- a/GD.FinishingSystem.WEB/Views/Migration/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Migration/Delete.cshtml
@@ -4,112 +4,112 @@
     var areaID = ViewBag.AreaID;
 }
 
-<h1>Delete</h1>
-<h3>Are you sure you want to delete this?</h3>
+<h1>Eliminar</h1>
+<h3>¿Estás seguro que quieres eliminar este registro?</h3>
 <div>
     <h4>Rulo Raw Information</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             <i class="lni lni-line-dashed"></i>
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.RuloMigrationID)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Date)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Date)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Style)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Style)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.StyleName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.StyleName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.NextMachine)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.NextMachine)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Lote)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Lote)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.BeamStop)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.BeamStop)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Beam)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Beam)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.IsToyotaText)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.IsToyotaText)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Loom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Loom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceNo)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PieceNo)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.PieceBetilla)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.PieceBetilla)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Meters)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Meters)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.SizingMeters)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.SizingMeters)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.MigrationCategoryID)
         </dt>
         <dd class="col-sm-10">
             @Html.Raw(Model.MigrationCategory?.Name)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Observations)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Observations)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.WeavingShift)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.WeavingShift)
         </dd>
         <dt class="col-sm-2">
@@ -126,18 +126,18 @@
         </dd>
 
     </dl>
-    
+
     <form asp-action="Delete">
-        @Html.HiddenFor(model=> model.RuloMigrationID)
+        @Html.HiddenFor(model => model.RuloMigrationID)
         @Html.AntiForgeryToken()
         @if (areaID == (int)AreaType.Desarrollos && areaID == (int)AreaType.Acabado && Model.WarehouseCategoryID == 1)
         {
-            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button>
+            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Eliminar</button>
         }
         else if (areaID == (int)AreaType.Tejido && Model.WarehouseCategoryID == 8)
         {
-            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button>
+            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Eliminar</button>
         }
-        | <a asp-action="Index" asp-route-positionrulomigrationid="@Model.RuloMigrationID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+        | <a asp-action="Index" asp-route-positionrulomigrationid="@Model.RuloMigrationID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Regresar a Lista</a>
     </form>
 </div>
