--- a/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Rulo/Index.cshtml
@@ -20,7 +20,7 @@
 {
 <p>
     <a onclick="validateCreateRulo()" class="btn btn-sm btn-outline-light border-dark btn-dark">
-        <i class="lni lni-circle-plus"></i> Create Rulo Reprocess
+        <i class="lni lni-circle-plus"></i> Crear Registro de Reproceso
     </a>
 
     @*        <a asp-action="Create" class="btn btn-sm btn-outline-light border-dark btn-dark">
@@ -35,13 +35,13 @@
     <div class="row">
         <div class="col-md-2">
             <div class="form-group">
-                <label for="dtBegin">Begin</label><br>
+                <label for="dtBegin">Inicio</label><br>
                 <input type="datetime-local" style="width:100% !important;" id="dtBegin" name="dtBegin">
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="dtEnd">End</label><br>
+                <label for="dtEnd">Fin</label><br>
                 <input type="datetime-local" style="width:100% !important;" id="dtEnd" name="dtEnd">
 @*              <div style ="width:100% !important;"><label><input type="radio" id="RealDate" name="EndDateType" onclick="changeDate(1);" value="Real Date" checked /> Real Date</label>
                 <label><input type="radio" id="AccountingDate" name="EndDateType" onclick="changeDate(2);" value="Accounting Date" /> Accounting Date</label></div>*@
@@ -56,13 +56,13 @@
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="numBeam">Beam</label><br>
+                <label for="numBeam">Julio</label><br>
                 <input type="number" onfocusout="controlForSmallerThanZero('numBeam')" min="0" style="width:100% !important;" id="numBeam" name="numBeam">
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="numLoom">Loom</label><br>
+                <label for="numLoom">Telar</label><br>
                 <input type="number" onfocusout="controlForSmallerThanZero('numLoom')" min="0" style="width:100% !important;" id="numLoom" name="numLoom">
             </div>
         </div>
@@ -75,7 +75,7 @@
 
         <div class="col-md-2">
             <div class="form-group">
-                <label for="txtStyle">Style</label><br>
+                <label for="txtStyle">Estilo</label><br>
                 <input type="text" style="width:100% !important;" id="txtStyle" name="txtStyle" list="styleList">
                 <datalist id="styleList">
                     @foreach (var item in styleList)
@@ -93,25 +93,25 @@
     <div class="row">
         <div class="col-md-2">
             <div class="form-group">
-                <label for="numTestCategory">Test Result</label><br>
+                <label for="numTestCategory">Resultado de Pruebas</label><br>
                 <select style="width:100% !important;" id="numTestCategory" name="numTestCategory" asp-items="@ViewBag.TestCategorytList"></select>
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="numDefinitionProcess">Machine</label><br />
+                <label for="numDefinitionProcess">Máquina</label><br />
                 <select style="width:100% !important;" id="numDefinitionProcess" name="numDefinitionProcess" asp-items="@ViewBag.DefinitionProcessList"></select>
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="folioNumber">Folio Number</label><br />
+                <label for="folioNumber">No. Folio</label><br />
                 <input type="number" onfocusout="controlForSmallerThanZero('folioNumber')" min="0" style="width:100% !important;" id="folioNumber" name="folioNumber">
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
-                <label for="numRuloID">Rulo ID</label>
+                <label for="numRuloID">ID de Rulo</label>
                 <input type="number" onfocus="controlForSmallerThanZero('numRuloID')" min="0" style="width: 100% !important" id="numRuloID" name="numRuloID" />
             </div>
         </diV>
@@ -119,8 +119,8 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12" style="text-align:right">
-            <a onclick="setIndex();" class="btn btn-sm btn-outline-info"><i class="lni lni-search"></i> Filter</a>
-            <a onclick="clearFilters();" class="btn btn-sm btn-outline-info"><i class="lni lni-brush"></i> Clear Filters</a>
+            <a onclick="setIndex();" class="btn btn-sm btn-outline-info"><i class="lni lni-search"></i> Filtrar</a>
+            <a onclick="clearFilters();" class="btn btn-sm btn-outline-info"><i class="lni lni-brush"></i> Limpiar Filtros</a>
         </div>
     </div>
 
@@ -136,7 +136,7 @@
         <tr>
             <th colspan="16">
                 <div>
-                    Rulo List
+                    Lista de Rulos
 @*                    @if (User.IsInRole("Authorize", AuthType.Full))
                     {
                         <a onclick="exportToWarehouseStock();" class="btn btn-sm btn-info"><i class="far fa-file-excel"></i> Warehouses Stock</a>
