--- a/GD.FinishingSystem.WEB/Views/Report/Index.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Report/Index.cshtml
@@ -11,13 +11,15 @@
         <div class="col-md-2">
             <div class="form-group">
                 <label for="dtBegin">Begin</label><br>
-                <input type="datetime-local" style="width:100% !important;" id="dtBegin" name="dtBegin">
+                @* <input type="datetime-local" style="width:100% !important;" id="dtBegin" name="dtBegin"> *@
+                <input type="date" style="width:100% !important;" id="dtBegin" name="dtBegin">
             </div>
         </div>
         <div class="col-md-2">
             <div class="form-group">
                 <label for="dtEnd">End</label><br>
-                <input type="datetime-local" style="width:100% !important;" id="dtEnd" name="dtEnd">
+                @* <input type="datetime-local" style="width:100% !important;" id="dtEnd" name="dtEnd"> *@
+                <input type="date" style="width:100% !important;" id="dtEnd" name="dtEnd">
             </div>
         </div>
         <div class="col-md-2">
